Update CorsConfig.java